Add the full sgct submodule Some fixes to the CMakeLists file to make it work out of the box on Windows (untested on Mac or Linux) Cleanup gitignore file and remove

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,29 +31,38 @@ target_compile_features("${PROJECT_NAME}" PUBLIC cxx_std_11)
 install(TARGETS "${PROJECT_NAME}" DESTINATION bin)
 install(FILES "main.cpp" DESTINATION src)
 
-find_library(LIBWEBSOCKETS_LIBRARY
-	NAMES websockets REQUIRED)
-find_path(LIBWEBSOCKETS_INCLUDE_DIRECTORY
-		NAMES libwebsockets
-		REQUIRED)
+set(LWS_WITH_SSL OFF CACHE BOOL "") # Disable SSL requirement
 
-if(NOT LIBWEBSOCKETS_INCLUDE_DIRECTORY)
-find_path(LIBWEBSOCKETS_INCLUDE_DIRECTORY
-		libwebsockets.h
-		REQUIRED)
-endif()
+add_subdirectory(libwebsockets)
+
+# find_library(LIBWEBSOCKETS_LIBRARY
+# 	NAMES websockets REQUIRED)
+# find_path(LIBWEBSOCKETS_INCLUDE_DIRECTORY
+# 		NAMES libwebsockets
+# 		REQUIRED)
+
+# if(NOT LIBWEBSOCKETS_INCLUDE_DIRECTORY)
+# find_path(LIBWEBSOCKETS_INCLUDE_DIRECTORY
+# 		libwebsockets.h
+# 		REQUIRED)
+# endif()
+
+# include_directories(${SGCT_INCLUDE_DIRECTORY} ${LIBWEBSOCKETS_INCLUDE_DIRECTORY})
+
+include_directories(${SGCT_INCLUDE_DIRECTORY} ${CMAKE_CURRENT_SOURCE_DIR}/libwebsockets/include)
 
 
-include_directories(${SGCT_INCLUDE_DIRECTORY} ${LIBWEBSOCKETS_INCLUDE_DIRECTORY})
-
+set(SGCT_LIGHT_ONLY ON CACHE BOOL "") # We only want SGCT_LIGHT to be build
+set(JPEG_TURBO_WITH_SIMD OFF CACHE BOOL "") # This removes the requirement for nasm
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sgct)
+
 target_include_directories("${PROJECT_NAME}" SYSTEM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/sgct/include)
 target_link_libraries(
     "${PROJECT_NAME}"
     sgct_light glew glfw png16_static quat tinyxml2static turbojpeg-static zlibstatic miniziplibstatic
     vrpn freetype
     ${GLFW_LIBRARIES}
-	${LIBWEBSOCKETS_LIBRARY}
+    websockets
 )
 
 
@@ -61,14 +70,14 @@ if( MSVC )
 	set(LIBS
 		${SGCT_LIBS}
 		${OPENGL_gl_LIBRARY}
-		${LIBWEBSOCKETS_LIBRARY}
+		websockets
 		ws2_32
 	)
 elseif( WIN32 ) #MINGW or similar
 	set(LIBS
 		${SGCT_LIBS}
 		${OPENGL_gl_LIBRARY}
-		${LIBWEBSOCKETS_LIBRARY}
+		websockets
 		ws2_32
 	)
 elseif( APPLE )
@@ -82,7 +91,7 @@ elseif( APPLE )
 		${COCOA_LIBRARY}
 		${IOKIT_LIBRARY}
 		${COREVIDEO_LIBRARY}
-		${LIBWEBSOCKETS_LIBRARY}
+		websockets
 	)
 	else() #linux
 		find_package(X11 REQUIRED)
@@ -98,6 +107,6 @@ elseif( APPLE )
 			${X11_Xxf86vm_LIB}
 			${X11_Xcursor_LIB}
 			${CMAKE_THREAD_LIBS_INIT}
-			${LIBWEBSOCKETS_LIBRARY}
+			websockets
 		)
 	endif()
